dgm-lib v3.x.x
 * Added convenience overloads for `dgm::Clip::getFrame` and `dgm::Clip::getFrameUnchecked`
    * Enums are now accepted, internally calling `std::to_underlying`
 * dgm::App sets a default view encapsulating the whole screen at a current resolution before each draw

dgm-lib v3.1.0
 * `dgm::Controller::readAnalog` no longer returns negative values for negative axii halves
    * One gamepad could've a negative half on up, second could have it on down, it is easier to handle in client code this way
 * Fixed `dgm::Camera` shaking algoritm so the camera can be moved while being shaked
 * `dgm::TextureAtlas` got a convenience `addImage` method
 * Added `dgm::Utility::loadFileAllText` helper
    * Used for loading regular text files with one command
 * Added `dgm::Utility::loadAssetAllText` helper
    * Used for loading asset files inside APKs with one command
 * Added `dgm::ResourceManager::insertResource` for insertion of runtime-instantiated resources
 * Added `dgm::Collision::basic` for Circle, Rectangle and VisionCone with sf::Vector2f
	* Old collision methods for VisionCone were deprecated, in favor of methods with swapped arguments
 * Added `dgm::Collision::basic` for VisionCone and Rectangle
 * Compilation using Clang (18+) is supported on both Windows and Ubuntu

dgm-lib v3.0.0
 * Library target has been renamed to `dgm-lib` and a `dgm::dgm-lib` alias has been added. Use that for linking
 * You can now use `find_package` on a downloaded release to easily link the library. See docs/integration for details
 * You can force dgm-lib to use an external installation / clone of SFML to maintain a consistent version with other libraries. See docs/integration for details
 * `dgm::AppStateConfig` marked as final
 * `dgm::Clip` is now nodiscard and final
 * `dgm::Camera` is now final
 * `dgm::Error` replaces `dgm::ErrorMessage`
    * Contains message and a stacktrace
    * This is a `std::expected` version of `dgm::Exception`